<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="pref_category_profile"
        app:title="@string/pref_header_profile">

        <!-- Usamos la clase personalizada para manejar el binding del layout de cabecera -->
        <com.example.unigo_das.fragments.ProfileHeaderPreference
            app:key="pref_profile_header" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="pref_category_account"
        app:title="@string/pref_account_section">

        <Preference
            app:iconSpaceReserved="false"
            app:key="pref_my_account"
            app:title="@string/pref_my_account" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="pref_logout"
            app:title="@string/pref_logout" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="pref_login"
            app:title="@string/pref_login" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="pref_category_general"
        app:title="@string/pref_general_config">

        <Preference
            app:iconSpaceReserved="false"
            app:key="pref_language"
            app:title="@string/pref_language" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:defaultValue="false"
            app:key="modo_oscuro_activado"
            app:title="@string/pref_dark_mode"
            app:summary="@string/pref_dark_mode_summary" />

    </PreferenceCategory>

</PreferenceScreen>